# klavis

./: .gitignore  CONTRIBUTING.md  LLM.md  MCP_SERVER_GUIDE.md  README.md  openapi-config.json  package-lock.json  test_mcp_server_api.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cicd.yaml  generate-sdks.yml  mcp-servers-build.yml  mcp_clients_lint.yml  mcp_servers_lint.yml  python-app.yml  python-sdk-release.yml  server-name-mapping.json  sync-openapi.yml  typescript-sdk-release.yml
_oauth_support/: README.md  oauth_acquire.sh  server_name.json
_oauth_support/docker/: Dockerfile.template  entrypoint_wrapper.sh
docs/: develop-with-ai.mdx  docs.json  installation.mdx  introduction.mdx  quickstart.mdx
docs/ai-platform-integration/: claude.mdx  crewai.mdx  fireworks-ai.mdx  gemini.mdx  google-adk.mdx  langchain.mdx  llamaindex.mdx  openai.mdx  together-ai.mdx
docs/api-reference/: api_key.mdx  introduction.mdx  openapi.json
docs/auth/: white-label.mdx
docs/concepts/: mcp.mdx  strata.mdx
docs/documentation/: develop-with-ai.mdx  introduction.mdx  klavis-oauth-white-label.mdx  klavis-security.mdx  klavis-unified-mcp-server.mdx  oauth_white_label.mdx  quickstart.mdx
docs/knowledge-base/: develop-with-ai.mdx  introduction.mdx  llm-based-development.mdx
docs/legacy/: instance.mdx
docs/mcp-server/: affinity.mdx  airtable.mdx  asana.mdx  attio.mdx  box.mdx  brave_search.mdx  cal_com.mdx  calendly.mdx  clickup.mdx  close.mdx  cloudflare.mdx  coinbase.mdx  confluence.mdx  dialpad.mdx  discord.mdx  doc2markdown.mdx  docusign.mdx  dropbox.mdx  elevenlabs.mdx  exa.mdx  fathom.mdx  figma.mdx  firecrawl-deep-research.mdx  firecrawl-web-search.mdx  fireflies.mdx  freshdesk.mdx  github.mdx  gitlab.mdx  gmail.mdx  gong.mdx  google_calendar.mdx  google_docs.mdx  google_drive.mdx  google_jobs.mdx  google_sheets.mdx  hacker_news.mdx  heygen.mdx  hubspot.mdx  jira.mdx  klavis-reportgen.mdx  (+37 more)
docs/sdk/: python.mdx  typescript.mdx
examples/claude/: Use_Klavis_with_Claude.ipynb
examples/connect-mcp-server/: .env.example  requirements.txt
examples/crewai/: Salesforce_Gmail_CrewAI_Integration.ipynb  Use_Klavis_with_CrewAI.ipynb
examples/function-calling/: main.py  (+1 more)
fern/: README.md  fern.config.json  generators.yml  openapi.json  overrides.yml
mcp-clients/: .dockerignore  .env.example  Dockerfile.discord  Dockerfile.slack  Dockerfile.web  Dockerfile.whatsapp  README-Discord.md  README-Slack.md  README-Web.md  README-WhatsApp.md  README.md  pyproject.toml
mcp-clients/src/mcp_clients/: base_bot.py  config.py  discord_bot.py  local_mcp_servers.json  mcp_client.py  slack_bot.py  sse_client.py  streamable_http_client.py  web_bot.py  whatsapp_bot.py
mcp-clients/src/mcp_clients/llms/: __init__.py  anthropic.py  base.py  openai.py
mcp-clients/src/mcp_clients/slack/: __init__.py  context.py  event_routes.py  interactive_handlers.py  message_handlers.py  oauth_routes.py  settings.py
mcp_clients/: Dockerfile.discord  Dockerfile.slack  Dockerfile.web  README-Discord.md  README-Slack.md  README-Web.md  README.md  base_bot.py  config.py  discord_bot.py  mcp_client.py  requirements.txt  slack_bot.py  sse_client.py  web_bot.py
mcp_servers/: .eslintignore  .eslintrc.js  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
mcp_servers/google_meet/: .env.example  README.md  dockerfile  pyproject.toml  requirements.txt  server.py
mcp_servers/google_meet/tools/: __init__.py  base.py  meet_api.py  utils.py
mcp_servers/mem0/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
mcp_servers/mem0/tools/: __init__.py  base.py  memories.py
open-strata/: .gitignore  README.md  pyproject.toml
open-strata/src/strata/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  main.py  mcp_client_manager.py  server.py  tools.py
open-strata/src/strata/mcp_proxy/: __init__.py  auth_provider.py  client.py
open-strata/src/strata/mcp_proxy/transport/: __init__.py  base.py  http.py  stdio.py
open-strata/src/strata/utils/: bm25_search.py  dict_utils.py  field_search.py  shared_search.py  tool_integration.py
open-strata/tests/: test_cli.py  test_config.py  test_config_sync_integration.py  test_config_watch.py  test_mcp_client.py  test_mcp_client_manager.py  test_mcp_client_manager_sync.py  test_server_integration.py  test_tool_integration.py
(+1463 files in other folders)
