[project]
name = "strata-mcp"
version = "1.0.1"
description = ""
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Klavis AI", email = "connect@klavis.ai" },
]
keywords = ["mcp", "model-context-protocol", "router", "ai", "llm", "tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
urls = { Homepage = "https://github.com/Klavis-AI/klavis", Repository = "https://github.com/Klavis-AI/klavis.git", Issues = "https://github.com/Klavis-AI/klavis/issues" }
dependencies = [
    "bm25s>=0.2.14",
    "mcp>=1.0.0",
    "platformdirs>=4.4.0",
    "pystemmer>=3.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "watchgod>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
strata = "strata.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strata"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests with real MCP servers (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
