[project]
name = "mem0"
version = "0.1.0"
description = "mem0 MCP Server for memory management and semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.12.0",
    "fastapi",
    "uvicorn[standard]",
    "click>=8.0.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "typing-extensions",
    "starlette>=0.27.0",
    "mem0ai>=0.1.115",
]
